--- a/z-test/index.html
+++ b/z-test/index.html
@@ -29,6 +29,11 @@
           <label for="password">Password</label>
           <input type="text" id="password" value="" >
         </div>
+        <!-- Test -->
+        <div class="inputs">
+          <label for="test">test</label>
+          <input type="checkbox" name="test" id="test" value="">
+        </div>
         <!-- Submit -->
         <div class="buttons">
           <input type="submit" value="Send">
